--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "@apidevtools/json-schema-ref-parser": "^10.1.0",
     "@openapi-contrib/openapi-schema-to-json-schema": "^4.0.5",
-    "ajv-cli": "^5.0.0"
+    "ajv-cli": "^5.0.0",
+    "json-merge-patch": "^1.0.2",
+    "yaml": "^2.3.1"
   }
 }
