--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@openapi-contrib/openapi-schema-to-json-schema": "^4.0.5",
     "ajv-cli": "^5.0.0",
     "json-merge-patch": "^1.0.2",
+    "json-ptr": "^3.1.1",
     "yaml": "^2.3.1"
   }
 }
