--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ajv-cli": "^5.0.0",
     "json-merge-patch": "^1.0.2",
     "json-ptr": "^3.1.1",
+    "properties-file": "^3.3.12",
     "yaml": "^2.3.1"
   }
 }
