Add description for bruteForceStrategy in RealmRepresentation

--- a/patches/v26/descriptions.yml
+++ b/patches/v26/descriptions.yml
@@ -808,6 +808,11 @@ RealmRepresentation:
         $ref: ${baseUri}#/maxTemporaryLockouts
       description:
         $ref: ${baseUri}#/maxTemporaryLockoutsHelp
+    bruteForceStrategy:
+      title:
+        $ref: ${baseUri}#/bruteForceStrategy
+      description:
+        $ref: ${baseUri}#/bruteForceStrategyHelp
     maxFailureWaitSeconds:
       title:
         $ref: ${baseUri}#/maxFailureWaitSeconds
