--- a/patches/v21+/refine-types.yml
+++ b/patches/v21+/refine-types.yml
@@ -289,13 +289,13 @@ RealmRepresentation:
       enum:
         - not specified
         - platform
-        - cross platform
+        - cross-platform
     webAuthnPolicyRequireResidentKey:
       type: string
       enum:
         - not specified
-        - "yes"
-        - "no"
+        - "Yes"
+        - "No"
     webAuthnPolicyUserVerificationRequirement:
       type: string
       enum:
@@ -315,13 +315,13 @@ RealmRepresentation:
       enum:
         - not specified
         - platform
-        - cross platform
+        - cross-platform
     webAuthnPolicyPasswordlessRequireResidentKey:
       type: string
       enum:
         - not specified
-        - "yes"
-        - "no"
+        - "Yes"
+        - "No"
     webAuthnPolicyPasswordlessUserVerificationRequirement:
       type: string
       enum:
